syntax = "proto3";
package nova.gal.v1;

import "nova/gal/v1/params.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Carina-labs/nova/x/gal/types";

message DepositRecord {
  string zone_id = 1;
  string claimer = 2;
  repeated DepositRecordContent records = 3;
}

message DepositRecordContent {
  string depositor = 1;
  cosmos.base.v1beta1.Coin amount = 2;
  int64 state = 3;
  uint64 oracle_version = 4;
  uint64 delegate_version = 5;
}

message UndelegateRecord {
  string zone_id = 1;
  string delegator = 2;
  repeated UndelegateRecordContent records = 3;
}

message UndelegateRecordContent {
  string withdrawer = 1;
  cosmos.base.v1beta1.Coin sn_asset_amount = 2;
  string withdraw_amount = 3[(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  int64 state = 4;
  uint64 oracle_version = 5;
  uint64 undelegate_version = 6;
}

message WithdrawRecord {
  string zone_id = 1;
  string withdrawer = 2;
  map <uint64, WithdrawRecordContent> records = 3;
}

message WithdrawRecordContent {
  string amount = 1[(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  int64 state = 2;
  int64 oracle_version = 3;
  uint64 withdraw_version = 4;
  google.protobuf.Timestamp completion_time = 5[(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}